<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/information_header">

        <EditTextPreference
            app:key="settings_phone_name"
            app:title="@string/settings_phone_name"
            app:defaultValue="Guard"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="settings_url"
            app:title="@string/settings_url"
            app:defaultValue="@string/default_url"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/panic_header">

        <EditTextPreference
            app:key="call_number"
            app:title="@string/phone_number_to_call"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="message_number"
            app:title="@string/phone_number_to_send_message"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="message_text"
            app:title="@string/panic_message"
            app:defaultValue="@string/default_panic_message"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>



</PreferenceScreen>