<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainScreen"
    android:orientation="vertical"
    >



    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/flashlight"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/turn_on_flashlight" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/incident_report"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/incident_report" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/panic_button_call"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/panic_button_call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <Button
                android:id="@+id/panic_button_send_sms"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="@string/panic_button_send_sms" />
        </LinearLayout>

    </GridLayout>


</LinearLayout>